--- a/.github/workflows/Documenter.yml
+++ b/.github/workflows/Documenter.yml
@@ -15,6 +15,13 @@ jobs:
       - uses: julia-actions/setup-julia@latest
         with:
           version: '1.6'
+      - name: "Add the General registry via Git"
+        run: |
+          import Pkg
+          ENV["JULIA_PKG_SERVER"] = ""
+          Pkg.Registry.add("General")
+          Pkg.Registry.add("https://github.com/lootie/bbkt-reg.jl")
+        shell: julia --color=yes {0}
       - name: Install dependencies
         run: julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.instantiate()'
       - name: Build and deploy
