--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -10,6 +10,16 @@ on:
     tags: '*'
 jobs:
   test:
+    name: Add custom registry
+    steps:
+      - uses: actions/checkout@v2
+      - uses: julia-actions/add-julia-registry@v1
+        with:
+          registry: lootie/bbkt-reg.jl
+      - uses: julia-actions/setup-julia@v1
+        with:
+          version: 1
+      - uses: julia-actions/julia-runtest@v1
     name: Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }} - ${{ github.event_name }}
     runs-on: ${{ matrix.os }}
     strategy:
@@ -39,20 +49,6 @@ jobs:
             ${{ runner.os }}-test-${{ env.cache-name }}-
             ${{ runner.os }}-test-
             ${{ runner.os }}-
-      script:
-        - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-        - julia -e 'using Pkg, LibGit2;
-            user_regs = joinpath(DEPOT_PATH[1],"registries");
-            mkpath(user_regs);
-            all_registries = Dict("General" => "https://github.com/JuliaRegistries/General.git",
-                                "HaleyLabRegistry" => "https://github.com/lootie/bbkt-reg.git");
-            Base.shred!(LibGit2.CachedCredentials()) do creds
-            for (reg, url) in all_registries
-                path = joinpath(user_regs, reg);
-                LibGit2.with(Pkg.GitTools.clone(url, path; header = "registry $reg from $(repr(url))", credentials = creds)) do repo end
-            end
-            end'
-      - julia -e 'using Pkg; Pkg.build(); Pkg.test("Slepians"; coverage=false)'
       - uses: julia-actions/julia-buildpkg@v1
       - uses: julia-actions/julia-runtest@v1
       - uses: julia-actions/julia-processcoverage@v1
