--- a/Project.toml
+++ b/Project.toml
@@ -25,9 +25,9 @@ FastGaussQuadrature = "0.4"
 RecipesBase = "1"
 FFTW = "1"
 IterTools = "1"
-FINUFFT = "2,3"
+FINUFFT = "2, 3"
 KrylovKit = "0.5"
-SpecialFunctions = "2"
+SpecialFunctions = "1, 2"
 
 [extras]
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
