--- a/Examples/Project.toml
+++ b/Examples/Project.toml
@@ -1,2 +1,14 @@
 [deps]
+AbstractPlotting = "537997a7-5e4e-5d89-9595-2241ea00577e"
+Dierckx = "39dd38d3-220a-591b-8e3c-4c3a8c710a94"
+FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
+GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
+Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
+IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
+KernelMatrices = "b172bcd2-82ed-11e9-108e-f9294c34b9e6"
+KrylovKit = "0b1a1467-8014-51b9-945f-bf0ae24f4b77"
+Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
+PCHIPInterpolation = "afe20452-48d1-4729-9a8b-50fb251f06cd"
+PlotlyJS = "f0f68f2c-4968-5e81-91da-67840de0976a"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
